<resources>
    <string name="app_name">FullHouser</string>
    <string name="rot_card_hint">Rotation Card</string>
    <string name="submit_text">Submit Deck</string>
    <string name="add_card_description">Add new card</string>
    <string name="add_card_text">Add</string>
    <string name="card_hint">Ex.: AS</string>

    <string name="error_unique_card_set">Cards must be unique!</string>
    <string name="error_cards_not_valid">Some cards are not valid!</string>
    <string name="error_rot_card_empty">Missing rotation card!</string>

    <string name="error_something_went_wrong">Ops! Something went wrong :(</string>
    <string name="error_something_went_really_wrong">Sorry, this never happened before T.T</string>

    <string name="highest_value">Highest Value: </string>
    <string name="full_house_combinations">Full House Combinations: </string>

    <string name="no_combinations_msg">There are no combinations</string>
    <string name="here_is_the_order">Here is the order: </string>

    <string name="create_deck">Create an awesome Deck!</string>
</resources>