<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.victorvgc.fullhouser.flow_two.FlowTwoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".flow_two.ui.FlowTwoActivity">

        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/no_combinations_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_combinations"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/ll_highest_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_deck">

            <TextView
                android:id="@+id/tv_highest_value"
                style="@style/DefaultTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_value" />

            <!--<ImageView
                android:id="@+id/iv_highest_card"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_marginStart="8dp"
                android:contentDescription="@{viewModel.highestCard.toString()}"
                app:srcCompat="@drawable/bg_main_button_disabled"
                bind:loadCard="@{viewModel.highestCard}" />-->
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_deck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:deck="@{viewModel.deck}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_full_house"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_combinations"
            app:layout_constraintVertical_bias="0.0"
            bind:fullHouse="@{viewModel.fullHouseList}" />

        <TextView
            android:id="@+id/tv_combinations"
            style="@style/DefaultTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/full_house_combinations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_highest_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>